@@ -8,4 +8,8 @@
     <key>chatmessagehandlerUserMenu</key>
     <object mime="image/png">chatmessagehandlerusermenu.png</object>
   </icon>
+  <icon>
+    <key>chatmessagehandlerClearChat</key>
+    <object mime="image/png">chatmessagehandlerclearchat.png</object>
+  </icon>
 </icondef>
